first phase of new form

--- a/index.htm
+++ b/index.htm
@@ -69,7 +69,7 @@
                     <!-- Cell Phone input-->
 
                     <div class="form-group">
-                        <label class="text-left col-md-4 control-label">Cell Phone #</label>
+                        <label class="text-left col-md-4 control-label">Cell Phone # (Optional)</label>
                         <div class="col-md-4 inputGroupContainer">
                             <div class="input-group">
                                 <span class="input-group-addon">
@@ -179,10 +179,11 @@
     </div>
     <!--END OF HTML HERE-->
     <!--Bootstrap Plugins-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script language="JavaScript" src="http://ant.hellomoving.com/STATERELOC/formcheck.js"></script>
-    <script src="main.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js"></script>
+    <script src="http://ant.hellomoving.com/STATERELOC/formcheck.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
