--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <head>
     <title>NewForm</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="http://dev5.granot.com/aviproject/main/CCForm10/Glogo.ico" />
+    <!-- <link rel="shortcut icon" type="image/png" href="http://dev5.granot.com/aviproject/main/CCForm10/Glogo.ico" /> -->
     <!-- optional addons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" crossorigin="anonymous">
